--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#d3d3d3 ">
+    android:background="#ffffff ">
 
 
     <android.support.v7.widget.Toolbar
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:background="#87cefa">
+        android:background="#9370db">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:text="Order History"
         android:textStyle="bold"
-        android:background="@color/colorPrimaryDark"
+        android:background="#9370db"
         android:layout_gravity="center"
         />
 
