--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -4,7 +4,8 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffffff">
 
 
     <LinearLayout
@@ -12,55 +13,71 @@
         android:layout_width="match_parent"
         android:layout_height="490dp"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/product_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/mobile" />
+            <ImageView
+                android:id="@+id/product_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/mobile" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="400dp"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/name_tag"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
+                <TextView
+                    android:id="@+id/name_tag"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="15dp"
 
-            android:hint="NAME"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-
-        <TextView
-            android:id="@+id/price_tag"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-
-            android:hint="PRICE"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+                    android:hint="NAME"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
 
-        <TextView
-            android:id="@+id/merchant_name_tag"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
+                <TextView
+                    android:id="@+id/price_tag"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="20dp"
 
-            android:hint="MERCHANT NAME"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+                    android:hint="PRICE"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/quantity_tag2"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
 
-            android:layout_marginLeft="20dp"
+                <TextView
+                    android:id="@+id/merchant_name_tag"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="20dp"
 
-            android:hint="Quantity"
-            android:textSize="20dp" />
+                    android:hint="MERCHANT NAME"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/quantity_tag2"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+
+                    android:layout_marginLeft="20dp"
+
+                    android:hint="Quantity"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+
 
 
         <LinearLayout
@@ -74,6 +91,7 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="10dp"
+                android:background="#9370db"
 
                 android:text="Buy Now" />
 
@@ -83,7 +101,7 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-
+                    android:background="#9370db"
                 android:text="AddTo Cart" />
         </LinearLayout>
 
