--- a/app/src/main/res/layout/list_category.xml
+++ b/app/src/main/res/layout/list_category.xml
@@ -8,6 +8,7 @@
             android:id="@+id/cv_parent"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:background="@drawable/customborder1"
             android:layout_margin="5dp">
 
             <RelativeLayout
