--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -11,69 +11,63 @@
     <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="490dp"
+        android:layout_height="390dp"
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="400dp"
-            android:orientation="horizontal">
+
 
             <ImageView
+
                 android:id="@+id/product_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:src="@drawable/mobile" />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="400dp"
-                android:orientation="vertical">
+
 
                 <TextView
                     android:id="@+id/name_tag"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
 
                     android:hint="NAME"
-                    android:textSize="20dp"
+                    android:textSize="10dp"
                     android:textStyle="bold" />
 
 
                 <TextView
                     android:id="@+id/price_tag"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_width="220dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
 
                     android:hint="PRICE"
-                    android:textSize="20dp"
+                    android:textSize="10dp"
                     android:textStyle="bold" />
 
 
                 <TextView
                     android:id="@+id/merchant_name_tag"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
 
                     android:hint="MERCHANT NAME"
-                    android:textSize="20dp"
+                    android:textSize="10dp"
                     android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/quantity_tag2"
                     android:layout_width="100dp"
-                    android:layout_height="50dp"
+                    android:layout_height="30dp"
 
                     android:layout_marginLeft="20dp"
 
                     android:hint="Quantity"
-                    android:textSize="20dp" />
+                    android:textSize="10dp" />
 
             </LinearLayout>
-
-        </LinearLayout>
 
 
 
@@ -108,29 +102,38 @@
 
 
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Description" />
+
+                android:padding="5dp"
+                android:layout_marginLeft="10dp"
+                android:text="Description:"
+                android:textSize="15dp"/>
 
             <TextView
                 android:id="@+id/description_tag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="2dp"
+                android:textSize="10dp"
+                android:padding="0dp"
                 android:text="Hp dell inspiration laptop octa core processor" />
-        </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="Recommedations:"
+        android:textSize="20dp"
+        android:textColor="#9370db"
+        />
 
         <android.support.v7.widget.RecyclerView
 
             android:id="@+id/recycler_view1"
-
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
