--- a/app/src/main/res/layout/card_recycler_view.xml
+++ b/app/src/main/res/layout/card_recycler_view.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="#9370db	"
         android:text="Checkout" />
 
 </RelativeLayout>
