--- a/app/src/main/res/layout/card_view_product_list.xml
+++ b/app/src/main/res/layout/card_view_product_list.xml
@@ -7,7 +7,8 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_tag"
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:background="@drawable/customborder1"
+        android:layout_height="270dp"
         android:layout_margin="10dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             <ImageView
                 android:id="@+id/thumbnail"
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="170dp"
                 android:padding="4dp"
                  />
             <!--android:scaleType="fitXY -->
