--- a/app/src/main/res/layout/productlist.xml
+++ b/app/src/main/res/layout/productlist.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#d3d3d3">
+    android:background="#ffffff">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
         app:navigationIcon="@drawable/arrowleft"
-        android:background="#87cefa">
+        android:background="#9370db	">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
