--- a/app/src/main/res/layout/recycler_view_order_history1.xml
+++ b/app/src/main/res/layout/recycler_view_order_history1.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+
+    android:background="@drawable/customborder1"
     android:orientation="vertical">
     <TextView
         android:id="@+id/order_id"
@@ -13,6 +14,7 @@
         android:hint="orderId"/>
 
     <android.support.v7.widget.RecyclerView
+
         android:id="@+id/recycler4_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="right"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:layout_marginRight="10dp"
         android:hint="Amount" />
 
