--- a/app/src/main/res/menu/menuresource.xml
+++ b/app/src/main/res/menu/menuresource.xml
@@ -22,6 +22,12 @@
         android:title="User"
         android:icon="@drawable/logout"
         app:showAsAction="always"></item>
+    <item
+        android:id="@+id/action_home"
+        android:orderInCategory="300"
+        android:title="User"
+        android:icon="@drawable/home"
+        app:showAsAction="always"></item>
 
 
 
