--- a/app/src/main/res/layout/productlist.xml
+++ b/app/src/main/res/layout/productlist.xml
@@ -24,12 +24,11 @@
                 <!--android:layout_height="match_parent"-->
                 <!--android:text="YourOrders"/>-->
 
-            <EditText
+            <TextView
                 android:id="@+id/searchEditText"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:hint="What's Your wish"
                 />
 
         </LinearLayout>
