--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,50 +9,49 @@
     android:background="#ffffff ">
 
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
 
-        android:background="#9370db">
-        <LinearLayout
-            android:orientation="horizontal"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="#9370db">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
 
-
-            <EditText
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_width="290dp"
+                    android:layout_height="match_parent"
                     android:hint="What's Your wish?"
-                android:layout_width="290dp"
-                android:layout_height="match_parent"
-                android:textSize="20dp"
-                android:id="@+id/et_search" />
+                    android:textSize="20dp" />
 
-            <!--<ImageView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:src="@drawable/magnify"/>-->
-        </LinearLayout>
-    </android.support.v7.widget.Toolbar>
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recycler_view"
-        android:layout_weight="1"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="407dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1" />
 
-    <Button
-        android:id="@+id/bt_orderhistory"
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Order History"
-        android:textStyle="bold"
-        android:background="#9370db"
-        android:layout_gravity="center"
-        />
+
+
+
+        <Button
+            android:id="@+id/bt_orderHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/customborder1"
+            android:text="order History"
+            android:textStyle="bold"
+            android:backgroundTint="#9370db"/>
+
 
 </LinearLayout>
