--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,17 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff ">
-
+    android:background="#F2FDE4">
 
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar1"
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#9370db">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -50,8 +48,7 @@
             android:layout_marginBottom="0dp"
             android:background="@drawable/customborder1"
             android:text="order History"
-            android:textStyle="bold"
-            android:backgroundTint="#9370db"/>
+            android:textStyle="bold" />
 
 
 </LinearLayout>
