--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -47,15 +46,6 @@
             android:layout_marginTop="10dp"
             android:hint="Address" />
 
-        <!--<EditText-->
-        <!--android:id="@+id/et_password"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:layout_marginLeft="40dp"-->
-        <!--android:layout_width="300dp"-->
-        <!--android:inputType="textPassword"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:hint="Password"/>-->
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/etPasswordLayout"
             android:layout_width="match_parent"
@@ -94,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="25dp"
-            android:background="#9370db	"
+            android:background="#9370db"
             android:text="Sign up" />
 
         <Button
