--- a/app/src/main/res/layout/productlist.xml
+++ b/app/src/main/res/layout/productlist.xml
@@ -1,45 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#9370db	"
         android:minHeight="?attr/actionBarSize"
-        app:navigationIcon="@drawable/arrowleft"
-        android:background="#9370db	">
+        app:navigationIcon="@drawable/arrowleft">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-
-            <!--<Button-->
-                <!--android:layout_width="60dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:text="YourOrders"/>-->
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/searchEditText"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                />
+                android:layout_marginLeft="0dp" />
 
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="10dp"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recycler_view"/>
-
+        android:layout_marginTop="10dp" />
 
 
 </LinearLayout>
