--- a/app/src/main/res/layout/card_recycler_view.xml
+++ b/app/src/main/res/layout/card_recycler_view.xml
@@ -2,20 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2FDE4"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
         style="@style/HeaderBar"
-        android:background="#9370db"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
         android:elevation="4dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler2_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/check_out"
         android:layout_below="@+id/my_toolbar" />
 
     <TextView
@@ -26,12 +29,11 @@
         android:visibility="gone"/>
 
     <Button
-        android:layout_below="@+id/recycler2_view"
         android:id="@+id/check_out"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#9370db	"
+        android:background="@color/colorPrimaryDark"
         android:text="Checkout" />
 
 
