--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -77,6 +77,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
+            android:background="@color/colorPrimaryDark"
+            android:padding="4dp"
             android:text="no Account? SIGNUP" />
 
 
