--- a/app/src/main/res/layout/productlist.xml
+++ b/app/src/main/res/layout/productlist.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#9370db	"
+        android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         app:navigationIcon="@drawable/arrowleft">
 
